# node-counting

./: CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
nc/: __init__.py  funcs.py
nc/backend/: bindings.cpp  mapper.cpp  mapper.h
